# dejavu

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  equity.csv  pyproject.toml  zensical.toml
.github/workflows/: ci.yml  docs.yml
data/: generate_data.py
dejavu/: engine.py  schemas.py
dejavu/data/: cache.py  feed.py
dejavu/data/feeds/: alpha_vantage.py  binance.py  massive.py
dejavu/execution/: commission.py  margin.py  orders.py  validators.py
dejavu/indicators/: base.py  ma.py  macd.py
dejavu/lib_core.dylib.dSYM/Contents/Resources/Relocations/aarch64/: lib_core.dylib.yml
dejavu/portfolio/: __init__.py  base.py
dejavu/portfolio/rebalancing/: base.py  scheduled.py
dejavu/strategy/: base.py  covered_call.py
dejavu/strategy/sizers/: __init__.py  base.py  fixed.py  risk.py
docs/: getting_started.md  index.md
docs/brokers/: commission.md  slippage.md
docs/data/: index.md  providers.md
docs/engine/: engine.md  validators.md
docs/indicators/: indicators.md  moving_averages.md
docs/strategy/: sizers.md  strategy.md
examples/: binance.py  covered_call.py  ma_crossover.py  macd_strategy.py  options.csv  position_sizing.py  price.py
src/: lib.rs
tests/: conftest.py  test_engine.py
tests/data/: test_alpha_vantage.py  test_binance.py  test_feeds.py
tests/execution/: test_commission.py  test_execution.py  test_validators.py
tests/indicators/: test_ma.py  test_macd.py
tests/performance/: __init__.py  test_data_feeds.py  test_performance.py
tests/portfolio/: test_portfolio.py
tests/strategy/sizers/: test_sizers.py
